applications/calico/disablekubeproxy.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-proxy
  namespace: kube-system
spec:
  template:
    spec:
      nodeSelector:
        non-calico: true
