applications/calico/calicoplatformtier.yaml
---
apiVersion: projectcalico.org/v3
kind: GlobalNetworkPolicy
metadata:
  name: rulediscovery
spec:
  selector: all()
  order: 1
  types:
  - Ingress
  - Egress
  ingress:
  - action: Log
  - action: Allow
  egress:
  - action: Allow
    protocol: TCP
    nets:
    - 10.96.0.0/24
    ports:
    - 443
  - action: Log
  - action: Allow
